[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/circle.png" type="Texture" id=1]
[ext_resource path="res://Sprites/light.png" type="Texture" id=2]
[ext_resource path="res://Objects/Light.gd" type="Script" id=3]
[ext_resource path="res://Sound/electrichum.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sound/break.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Break"
tracks/0/type = "audio"
tracks/0/path = NodePath("BreakSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 0.0784314 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakSound:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.901 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -10.0, -80.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BulbSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.227451 ), Color( 1, 1, 1, 0.0196078 ) ]
}

[sub_resource type="CircleShape2D" id=2]

[node name="Light" type="Node2D" groups=[
"lights",
]]
scale = Vector2( 4, 4 )
script = ExtResource( 3 )

[node name="BreakTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Break = SubResource( 1 )

[node name="HumSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="BreakSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="LightSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BulbSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.227451 )
texture = ExtResource( 2 )

[node name="LightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightArea"]
scale = Vector2( 3.24189, 3.24189 )
shape = SubResource( 2 )
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="area_entered" from="LightArea" to="." method="_on_LightArea_area_entered"]
[connection signal="area_exited" from="LightArea" to="." method="_on_LightArea_area_exited"]
